--- a/Integer.vcxproj
+++ b/Integer.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="test\default_test.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\integer.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
