--- a/Integer.vcxproj.filters
+++ b/Integer.vcxproj.filters
@@ -18,9 +18,21 @@
     <ClCompile Include="test\default_test.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="src\basicinteger.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\integer.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="src\basicinteger.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pair.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="src\sign.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
