--- a/Integer.vcxproj.filters
+++ b/Integer.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\nodeinteger.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="src\integer.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\integer.h">
